<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <TextView android:text="@string/firstProblem" android:textSize="20sp" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    <TextView android:text="@string/firstProblemDescription" android:textSize="16sp" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    <Button android:text="@string/dialog" android:onClick="showDialog" android:textSize="16sp" android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
    <TextView android:text="@string/secondProblem" android:layout_marginTop="20sp" android:textSize="20sp" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    <TextView android:text="@string/secondProblemDescription" android:textSize="16sp" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    
</LinearLayout>
